[package]
name = "multican"
version = "0.2.0"
authors = ["Nick Gamroth <thebeekeeper@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Provides connections to multiply CAN busses at the same time.  Allows use of different types of networks"
repository = "https://github.com/Dawn-Equipment-Company/multican"
keywords = ["can", "canbus", "socketcan", "pcan"]
license = "MIT"

[dependencies]
log = "0.4"
serde = "1.0"
serde_derive = "1.0"

[target.'cfg(unix)'.dependencies]
socketcan = "1.7.0"

[target.'cfg(windows)'.dependencies]
pcan-basic-sys = "0.2.0"

[dependencies.socket2]
version = "0.3.8"
features = ["reuseport"]
