[package]
name = "multican"
version = "0.4.0"
authors = ["Nick Gamroth <thebeekeeper@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Provides connections to multiple CAN busses at the same time.  Allows use of different types of networks"
repository = "https://github.com/Dawn-Equipment-Company/multican"
keywords = ["can", "canbus", "socketcan", "pcan"]
license = "MIT"

[features]
default = []
async-tokio = ["tokio", "tokio-util", "futures", "bytes", "async-trait", "mio", "thiserror", "libc"]
#async-tokio = ["tokio", "tokio-util", "futures", "bytes", "async-trait", "tokio-socketcan"]

[dependencies]
log = "0.4"
serde = "1.0"
# had to specify the build number here or cargo can't resolve dependencies
serde_derive = "1.0.111"


tokio = { version = "0.2.0", features = ["full"], optional = true }
tokio-util = { version = "0.3.0", features = ["full"], optional = true }
bytes = { version = "0.5.4", optional = true }
futures = { version = "0.3.0", optional = true }
async-trait = { version = "0.1.31", optional = true }
#tokio-socketcan = { path = "../tokio-socketcan", optional = true }
mio = { version = "0.6", optional = true }
thiserror = { version = "1.0", optional = true }
libc = { version = "0.2", optional = true }

[target.'cfg(unix)'.dependencies]
socketcan = "1.7.0"

[target.'cfg(windows)'.dependencies]
pcan-basic-sys = "0.2.0"

[dependencies.socket2]
version = "0.3.8"
features = ["reuseport"]

[dev-dependencies]
env_logger = "0.7.1"
