[package]
name = "multican"
version = "0.5.0"
authors = ["Nick Gamroth <thebeekeeper@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Provides connections to multiple CAN busses at the same time.  Allows use of different types of networks"
repository = "https://github.com/Dawn-Equipment-Company/multican"
keywords = ["can", "canbus", "socketcan", "pcan"]
license = "MIT"

[features]
default = ["async-tokio"]
# removing this feature for now while I get it to work so I can release the threaded version
async-tokio = ["tokio", "tokio-stream", "tokio-util", "futures", "bytes", "async-trait", "tokio-socketcan", "mio", "thiserror", "libc"]

[dependencies]
# log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

tokio = { version = "1.17.0", features = ["full", "tracing"], optional = true }
tokio-stream = {version = "0.1.8", optional = true }
tokio-util = { version = "0.7.1", features = ["full"], optional = true }
bytes = { version = "1.1.0", optional = true }
futures = { version = "0.3.21", optional = true }
async-trait = { version = "0.1.53", optional = true }
tokio-socketcan = { version = "0.3.1", optional = true }
mio = { version = "0.8.2", optional = true }
thiserror = { version = "1.0", optional = true }
libc = { version = "0.2", optional = true }

[target.'cfg(unix)'.dependencies]
socketcan = "1.7.0"

[target.'cfg(windows)'.dependencies]
pcan-basic-sys = "0.2.0"

[dependencies.socket2]
version = "0.4.4"
features = ["all"]

[dev-dependencies]
# console-subscriber = "0.1.3"
# tracing-opentelemetry = "0.17.2"
tracing-subscriber = "0.3"
# opentelemetry-jaeger = "0.16"
